tests/baselines/reference/duplicateLocalVariable4.errors.txt
==== tests/cases/compiler/duplicateLocalVariable4.ts (1 errors) ====
    enum E{
    a
    }
     
    var x = E;
    var x = E.a;
        ~~~~~~~
!!! duplicateLocalVariable4.ts(6,5): error TS2134: Subsequent variable declarations must have the same type.  Variable 'x' must be of type 'typeof E', but here has type 'E'.